apps/sonarr/06.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: sonarr
  labels:
    app: sonarr
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8989
  selector:
    app: sonarr-server
